Merge remote-tracking branch 'origin/main'
# Conflicts:
#	src/main/java/com/example/SingleSignOn/SingleSignOnApplication.java
#	src/main/java/com/example/SingleSignOn/controller/AdminController.java
#	src/main/java/com/example/SingleSignOn/controller/HomeController.java
#	src/main/java/com/example/SingleSignOn/controller/UserController.java
#	src/main/java/com/example/SingleSignOn/models/User.java
#	src/main/java/com/example/SingleSignOn/repository/UserRepository.java
#	src/main/java/com/example/SingleSignOn/security/config/WebSecurityConfig.java
#	src/main/java/com/example/SingleSignOn/service/UserService.java
#	src/main/java/com/example/SingleSignOn/service/UserServiceImpl.java
#	src/main/resources/application.properties